update to recent natraj et al. comparison data

--- a/notebooks/compare_trials_conv.ipynb
+++ b/notebooks/compare_trials_conv.ipynb
@@ -75,12 +75,17 @@
     "models_ch_ = ['AOS_1', 'AOS_2', 'AOS_3']\n",
     "λ_ch_      = np.array([350., 450., 550., 650.])\n",
     "θp_ch_     = np.array([30.0, 60.0])\n",
-    "θs_ch_     = np.linspace(0.0, 60.0, 13)\n",
+    "# θs_ch_     = np.linspace(0.0, 60.0, 13)\n",
     "φ_ch_      = np.array([0.0, 60.0, 180.0, 240.0])\n",
     "\n",
     "# Where to pull Mitsuba data from\n",
     "data_dir_ch = ['mitsuba_data/chowdhary/']\n",
     "data_dir_zh = ['mitsuba_data/zhai/']\n",
+    "\n",
+    "θs_ch_ = {}\n",
+    "θs_ch_['mitsuba_data/chowdhary/'] = np.linspace(0.0, 60.0, 7)\n",
+    "θs_ch_['mitsuba_data/zhai/'] = np.linspace(0.0, 60.0, 13)\n",
+    "θs_ch_['default'] = np.linspace(0.0, 60.0, 13)\n",
     "\n",
     "from parse_natraj_data import parse_file\n",
     "\n",
@@ -108,19 +113,19 @@
     "\n",
     "# Available Mitsuba data in direct comparison to Natraj et al.\n",
     "models_na_ = ['AOS_1*']\n",
-    "τ_na_      = np.array([0.5, 1.0])\n",
-    "μp_na_     = np.array([0.6, 1.0])\n",
-    "μs_na_     = np.array([0.1, 0.32, 0.52, 0.72, 1.0])\n",
+    "τ_na_      = np.array([0.02, 0.1, 0.5, 1.0])\n",
+    "μp_na_     = np.array([0.1, 0.6, 1.0])\n",
+    "μs_na_     = np.array([0.02, 0.1, 0.2, 0.32, 0.52, 0.72, 0.92, 1.0])\n",
     "φ_na_      = np.array([0.0])\n",
     "\n",
-    "data_dir_na = ['mitsuba_data/natraj/v1/trials_10/',\n",
-    "               'mitsuba_data/natraj/v1/trials_50/',\n",
-    "               'mitsuba_data/natraj/v2/trials_10/',\n",
-    "               'mitsuba_data/natraj/v2/trials_50/',\n",
-    "               'mitsuba_data/natraj/v3/trials_10/']\n",
+    "data_dir_na = ['mitsuba_data/natraj/']\n",
     "\n",
-    "n_samples     = np.array([1e3, 1e4, 1e5, 1e6, 1e7, 1e8, 1e9])\n",
-    "n_samples_alt = np.array([1e3, 1e4, 1e5, 1e6]) * 32 * 32"
+    "# Number of samples\n",
+    "n_samples = {}\n",
+    "n_samples['mitsuba_data/chowdhary/'] = np.array([4, 32, 256, 2048]) * 512 * 512\n",
+    "n_samples['mitsuba_data/zhai/'] = np.array([4, 32, 256, 2048]) * 512 * 512\n",
+    "n_samples['mitsuba_data/natraj/'] = np.array([4, 32, 256, 2048]) * 512 * 512\n",
+    "n_samples['default'] = np.array([1e3, 1e4, 1e5, 1e6]) * 32 * 32"
    ]
   },
   {
@@ -156,7 +161,7 @@
     "# Chowdhary et al. parameters\n",
     "λ_ch_ui  = selection_slider(options = λ_ch_, value = 350.0, description = 'λ')\n",
     "θp_ch_ui = selection_slider(options = θp_ch_, value = 30.0, description = 'θp')\n",
-    "θs_ch_ui = selection_slider(options = θs_ch_, value = 10.0, description = 'θs')\n",
+    "θs_ch_ui = selection_slider(options = θs_ch_['default'], value = 30.0, description = 'θs')\n",
     "φ_ch_ui  = selection_slider(options = φ_ch_, value = 0.0, description = 'φ')\n",
     "\n",
     "# Natraj et al. parameters\n",
@@ -178,9 +183,7 @@
     "ui_ch    = [λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui]\n",
     "ui_na    = [τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui]\n",
     "\n",
-    "data_warning = widgets.Label('When data is not available for a particular set of parameters, relative error will be 100% for all sample counts.')\n",
-    "\n",
-    "ui = widgets.VBox(children = ui_const + ui_ch + [data_warning])"
+    "ui = widgets.VBox(children = ui_const + ui_ch)"
    ]
   },
   {
@@ -212,10 +215,17 @@
     "    return data_tmp[:,s][ts]\n",
     "        \n",
     "# Get Mitsuba data relating to Chowdhary et al. parameters\n",
-    "def get_mts_ch_stokes(data, stokes, λ, θp, θs, φ):\n",
+    "def get_mts_ch_stokes(data_select, model_select, stokes, λ, θp, θs, φ):\n",
+    "    model_file = '../' + data_select + model_select + '_mts.npy'\n",
+    "    data = np.load(model_file)\n",
+    "    \n",
+    "    ts_tmp = np.where(θs == θs_ch_[data_select])[0]\n",
+    "    if len(ts_tmp) == 0:\n",
+    "        return np.zeros(len(n_samples))\n",
+    "    \n",
     "    w  = np.where(λ  == λ_ch_)[0][0]\n",
     "    tp = np.where(θp == θp_ch_)[0][0]\n",
-    "    ts = np.where(θs == θs_ch_)[0][0]\n",
+    "    ts = ts_tmp[0]\n",
     "    p  = np.where(φ  == φ_ch_)[0][0]\n",
     "    s  = stokes2idx(stokes)\n",
     "    \n",
@@ -237,15 +247,22 @@
     "    return data_tmp[:,s][ts]\n",
     "        \n",
     "# Get Mitsuba data relating to Zhai et al. parameters\n",
-    "def get_mts_zh_stokes(data, stokes, λ, θp, θs, φ):\n",
+    "def get_mts_zh_stokes(data_select, model_select, stokes, λ, θp, θs, φ):\n",
+    "    model_file = '../' + data_select + model_select + '_mts.npy'\n",
+    "    data = np.load(model_file)\n",
+    "    \n",
+    "    ts_tmp = np.where(θs == θs_ch_[data_select])[0]\n",
+    "    if len(ts_tmp) == 0:\n",
+    "        return np.zeros(len(n_samples))\n",
+    "    \n",
     "    w  = np.where(λ  == λ_ch_)[0][0]\n",
     "    tp = np.where(θp == θp_ch_)[0][0]\n",
-    "    ts = np.where(θs == θs_ch_)[0][0]\n",
+    "    ts = ts_tmp[0]\n",
     "    p  = np.where(φ  == φ_ch_)[0][0]\n",
     "    s  = stokes2idx(stokes)\n",
     "    \n",
     "    data_tmp = data[w, tp, ts, p, :, s, :]\n",
-    "        \n",
+    "    \n",
     "    # Do not need to convert to reflectance quantity since Zhai data is given in radiance\n",
     "    return data_tmp\n",
     "\n",
@@ -254,7 +271,10 @@
     "    return data_ref_na[stokes][τ][0.0][μp][μs][φ]\n",
     "\n",
     "# Get Mitsuba data relating to Natraj et al. parameters\n",
-    "def get_mts_na_stokes(data, stokes, τ, μp, μs, φ):\n",
+    "def get_mts_na_stokes(data_select, model_select, stokes, τ, μp, μs, φ):\n",
+    "    model_file = '../' + data_select + model_select + '_mts.npy'\n",
+    "    data = np.load(model_file)\n",
+    "    \n",
     "    t  = np.where(τ  == τ_na_)[0][0]\n",
     "    ms = np.where(μs == μs_na_)[0][0]\n",
     "    mp = np.where(μp == μp_na_)[0][0]\n",
@@ -281,10 +301,17 @@
     "    return dop(si, sq, su)\n",
     "\n",
     "# Get Mitsuba data relating to Chowdhary et al. parameters and calculate DOP\n",
-    "def get_mts_ch_dop(data, λ, θp, θs, φ):\n",
+    "def get_mts_ch_dop(data_select, model_select, λ, θp, θs, φ):\n",
+    "    model_file = '../' + data_select + model_select + '_mts.npy'\n",
+    "    data = np.load(model_file)\n",
+    "        \n",
+    "    ts_tmp = np.where(θs == θs_ch_[data_select])[0]\n",
+    "    if len(ts_tmp) == 0:\n",
+    "        return np.zeros(len(n_samples))\n",
+    "    \n",
     "    w  = np.where(λ  == λ_ch_)[0][0]\n",
     "    tp = np.where(θp == θp_ch_)[0][0]\n",
-    "    ts = np.where(θs == θs_ch_)[0][0]\n",
+    "    ts = ts_tmp[0]\n",
     "    p  = np.where(φ  == φ_ch_)[0][0]\n",
     "    \n",
     "    si = data[w, tp, ts, p, :, 0, :]\n",
@@ -312,10 +339,17 @@
     "    return dop(si, sq, su)\n",
     "\n",
     "# Get Mitsuba data relating to Zhai parameters and calculate DOP\n",
-    "def get_mts_ch_dop(data, λ, θp, θs, φ):\n",
+    "def get_mts_zh_dop(data_select, model_select, λ, θp, θs, φ):\n",
+    "    model_file = '../' + data_select + model_select + '_mts.npy'\n",
+    "    data = np.load(model_file)\n",
+    "        \n",
+    "    ts_tmp = np.where(θs == θs_ch_[data_select])[0]\n",
+    "    if len(ts_tmp) == 0:\n",
+    "        return np.zeros(len(n_samples))\n",
+    "    \n",
     "    w  = np.where(λ  == λ_ch_)[0][0]\n",
     "    tp = np.where(θp == θp_ch_)[0][0]\n",
-    "    ts = np.where(θs == θs_ch_)[0][0]\n",
+    "    ts = ts_tmp[0]\n",
     "    p  = np.where(φ  == φ_ch_)[0][0]\n",
     "    \n",
     "    si = data[w, tp, ts, p, :, 0, :]\n",
@@ -334,7 +368,10 @@
     "    return dop(si, sq, su)\n",
     "\n",
     "# Get Mitsuba data relating to Natraj et al. parameters and calculate DOP\n",
-    "def get_mts_na_dop(data, τ, μp, μs, φ):\n",
+    "def get_mts_na_dop(data_select, model_select, τ, μp, μs, φ):\n",
+    "    model_file = '../' + data_select + model_select + '_mts.npy'\n",
+    "    data = np.load(model_file)\n",
+    "    \n",
     "    t  = np.where(τ  == τ_na_)[0][0]\n",
     "    ms = np.where(μs == μs_na_)[0][0]\n",
     "    mp = np.where(μp == μp_na_)[0][0]\n",
@@ -358,7 +395,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4486e308b18d4136b4199e2806d892a6",
+       "model_id": "29c8e39c79f64faab0ddacea854e2b52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -372,13 +409,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "819a2b7988564dea96f0887d8105d2c3",
+       "model_id": "869598f776c54b628ede659f5d7e0661",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "FigureWidget({\n",
-       "    'data': [{'error_y': {'array': array([2.66820341, 0.98733441, 0.24778177, 0.07098833]),\n",
+       "    'data': [{'error_y': {'array': array([0.07791082, 0.0380801 , 0.01287988, 0.00407401]),\n",
        "   …"
       ]
      },
@@ -390,13 +427,13 @@
     "plots = []\n",
     "\n",
     "def create_error_plot():\n",
-    "    return go.Scatter(x = n_samples, y = np.zeros(len(n_samples)),\n",
+    "    return go.Scatter(x = n_samples['default'], y = np.zeros(len(n_samples['default'])),\n",
     "                        mode = 'lines+markers', \n",
     "                        line = dict(),\n",
     "                        name = '% Error',\n",
     "                        error_y = dict(\n",
     "                            type = 'data',\n",
-    "                            array = np.zeros(len(n_samples)),\n",
+    "                            array = np.zeros(len(n_samples['default'])),\n",
     "                            visible = True\n",
     "                        )\n",
     "                      )\n",
@@ -407,7 +444,7 @@
     "layout = go.Layout(\n",
     "#     showlegend = False,\n",
     "    title = 'Convergence of Mitsuba simulation vs. reference (line = mean, bars = 1 std dev)',\n",
-    "    xaxis_title_text = 'Number of samples',\n",
+    "    xaxis_title_text = 'Number of Samples',\n",
     "    yaxis = dict(\n",
     "                title_text = '% Error'\n",
     "#                 range = [-1.0, 1.0]\n",
@@ -422,60 +459,52 @@
     "           λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui,\n",
     "           τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui):\n",
     "    \n",
-    "    # Load Mitsuba data\n",
-    "    model_file = '../' + data_select + model_select + '_mts.npy'\n",
-    "    data_mts = np.load(model_file)\n",
-    "    \n",
-    "    if data_select2 != 'None':\n",
-    "        model_file2 = '../' + data_select2 + model_select + '_mts.npy'\n",
-    "        data_mts2 = np.load(model_file2)\n",
-    "    else:\n",
-    "        data_mts2 = None\n",
+    "    plot_data2 = (data_select2 != 'None')\n",
     "\n",
+    "    # Load data\n",
     "    if source_selected == 'chowdhary':\n",
     "        if stokes_select == 'DOP':\n",
     "            data_ref_new = get_ref_ch_dop(model_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
-    "            data_mts_new = get_mts_ch_dop(data_mts, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "            data_mts_new = get_mts_ch_dop(data_select, model_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
     "        else:\n",
     "            data_ref_new = get_ref_ch_stokes(model_select, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
-    "            data_mts_new = get_mts_ch_stokes(data_mts, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "            data_mts_new = get_mts_ch_stokes(data_select, model_select, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
     "\n",
-    "        if data_mts2 is not None:\n",
+    "        if plot_data2:\n",
     "            if stokes_select == 'DOP':\n",
-    "                data_mts_new2 = get_mts_ch_dop(data_mts2, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "                data_mts_new2 = get_mts_ch_dop(data_select2, model_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
     "            else:\n",
-    "                data_mts_new2 = get_mts_ch_stokes(data_mts2, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "                data_mts_new2 = get_mts_ch_stokes(data_select2, model_select, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
     "\n",
     "    elif source_selected == 'zhai':\n",
     "        if stokes_select == 'DOP':\n",
     "            data_ref_new = get_ref_zh_dop(model_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
-    "            data_mts_new = get_mts_zh_dop(data_mts, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "            data_mts_new = get_mts_zh_dop(data_select, model_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
     "        else:\n",
     "            data_ref_new = get_ref_zh_stokes(model_select, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
-    "            data_mts_new = get_mts_zh_stokes(data_mts, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "            data_mts_new = get_mts_zh_stokes(data_select, model_select, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
     "\n",
-    "        if data_mts2 is not None:\n",
+    "        if plot_data2:\n",
     "            if stokes_select == 'DOP':\n",
-    "                data_mts_new2 = get_mts_zh_dop(data_mts2, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "                data_mts_new2 = get_mts_zh_dop(data_select2, model_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
     "            else:\n",
-    "                data_mts_new2 = get_mts_zh_stokes(data_mts2, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "                data_mts_new2 = get_mts_zh_stokes(data_select2, model_select, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
     "        \n",
     "    elif source_selected == 'natraj':\n",
     "        if stokes_select == 'DOP':\n",
     "            data_ref_new = get_ref_na_dop(model_select, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
-    "            data_mts_new = get_mts_na_dop(data_mts, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
+    "            data_mts_new = get_mts_na_dop(data_select, model_select, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
     "        else:\n",
-    "            # Load experiment data (Stokes vector quantity)\n",
     "            data_ref_new = get_ref_na_stokes(stokes_select, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
-    "            data_mts_new = get_mts_na_stokes(data_mts, stokes_select, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
+    "            data_mts_new = get_mts_na_stokes(data_select, model_select, stokes_select, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
     "\n",
-    "        if data_mts2 is not None:\n",
+    "        if plot_data2:\n",
     "            if stokes_select == 'DOP':\n",
-    "                data_mts_new2 = get_mts_na_dop(data_mts2, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
+    "                data_mts_new2 = get_mts_na_dop(data_select2, model_select, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
     "            else:\n",
-    "                data_mts_new2 = get_mts_na_stokes(data_mts2, stokes_select, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
+    "                data_mts_new2 = get_mts_na_stokes(data_select2, model_select, stokes_select, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
     "\n",
-    "    x_samples = n_samples if data_mts_new.shape[0] == len(n_samples) else n_samples_alt\n",
+    "    x_samples = n_samples[data_select]\n",
     "    n_trials = data_mts_new.shape[1]\n",
     "\n",
     "    # Compute error\n",
@@ -486,13 +515,14 @@
     "    abs_error_std  = np.std(abs_error, axis = 1)\n",
     "    \n",
     "    rel_error = np.abs((data_mts_new - data_ref_fill) / data_ref_fill * 100.0)\n",
+    "#     rel_error = (data_mts_new - data_ref_fill) / data_ref_fill * 100.0\n",
     "    rel_error_mean = np.mean(rel_error, axis = 1)\n",
     "    rel_error_std  = np.std(rel_error, axis = 1)\n",
     "    \n",
     "    variance = np.var(data_mts_new, axis = 1)\n",
     "    \n",
-    "    if data_mts2 is not None:\n",
-    "        x_samples2 = n_samples if data_mts_new2.shape[0] == len(n_samples) else n_samples_alt\n",
+    "    if plot_data2:\n",
+    "        x_samples2 = n_samples[data_select2]\n",
     "        n_trials2 = data_mts_new2.shape[1]\n",
     "\n",
     "        # Compute error\n",
@@ -518,7 +548,7 @@
     "                y_data = abs_error_mean\n",
     "                y_std  = abs_error_std\n",
     "\n",
-    "                if data_mts2 is not None:\n",
+    "                if plot_data2:\n",
     "                    label2 = 'Abs Error (' + data_select2 + ')'\n",
     "                    y_data2 = abs_error_mean2\n",
     "                    y_std2  = abs_error_std2\n",
@@ -529,7 +559,7 @@
     "                y_data = rel_error_mean\n",
     "                y_std  = rel_error_std\n",
     "\n",
-    "                if data_mts2 is not None:\n",
+    "                if plot_data2:\n",
     "                    label2 = '% Error (' + data_select2 + ')'\n",
     "                    y_data2 = rel_error_mean2\n",
     "                    y_std2  = rel_error_std2\n",
@@ -539,7 +569,7 @@
     "            y_data = variance\n",
     "            y_std = np.zeros_like(y_data)\n",
     "            \n",
-    "            if data_mts2 is not None:\n",
+    "            if plot_data2:\n",
     "                    label2 = 'Variance (' + data_select2 + ')'\n",
     "                    y_data2 = variance2\n",
     "                    y_std2  = np.zeros_like(y_data2)\n",
@@ -550,7 +580,7 @@
     "        fig.data[0].y = y_data\n",
     "        fig.data[0].error_y.array = y_std\n",
     "        \n",
-    "        if data_mts2 is not None:\n",
+    "        if plot_data2:\n",
     "            fig.data[1].name = label2\n",
     "            fig.data[1].x = x_samples2\n",
     "            fig.data[1].y = y_data2\n",
@@ -619,7 +649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -633,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
